k8s/app/deployment.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: app
spec:
  replicas: 4
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: nginx
          image: nginx:1.19
          command: ["/bin/bash", "-c", "nginx -g 'daemon off;'"] # can not modify /etc/nginx/conf.d/default.conf (read-only file system?) を防止
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-default-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
            - name: nginx-nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
        - name: app-container
          image: k8s-request-counter-emitter:latest
          command: ["./main"]
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
      volumes:
        - name: nginx-default-config
          configMap:
            name: nginx-default-configmap
        - name: nginx-nginx-config
          configMap:
            name: nginx-nginx-configmap
  strategy:
    blueGreen:
      # 本番アクセス用のServiceの名前
      activeService: active-service
      # Previewアクセス用のServiceの名前
      previewService: preview-service
      # 手動昇格の有無
      autoPromotionEnabled: true
      # オプション Preview環境限定でreplicasの上書き
      previewReplicaCount: 1
      # オプション ReplicaSetが準備完了になってから自動昇格するまでの時間
      autoPromotionSeconds: 300
      # オプション 新Verにルーティングを切り替えた後に旧VerのPodのスケールダウンを開始させるまでの時間
      scaleDownDelaySeconds: 30
