k8s/app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  labels:
    app: app
spec:
  type: NodePort
  selector:
    app: app
  ports:
    - name: app
      port: 80
      targetPort: 80
      protocol: TCP
